fixed some container spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ a:hover {
 
 .container {
     margin-top: 5%;
-    padding: 30px;
+    /* padding: 30px; */
 }
 
 body {
